@@ -793,9 +793,9 @@ let emit_item = function
            long decimal constants *)
         `	.quad	0x{emit_string(Nativeint.format "%x" n)}\n`
   | Csingle f ->
-      `	.float	{emit_string f}\n`
+      emit_float32_directive ".long" f
   | Cdouble f ->
-      `	.double	{emit_string f}\n`
+      emit_float64_directive ".quad" f
   | Csymbol_address s ->
       `	.quad	{emit_symbol s}\n`
   | Clabel_address lbl ->
