@@ -723,9 +723,9 @@ let emit_item = function
   | Cint n ->
       `	.word	{emit_nativeint n}\n`
   | Csingle f ->
-      `	.single	0r{emit_string f}\n`
+      emit_float32_directive ".word" f
   | Cdouble f ->
-      `	.double	0r{emit_string f}\n`
+      emit_float64_split_directive ".word" f
   | Csymbol_address s ->
       `	.word	{emit_symbol s}\n`
   | Clabel_address lbl ->
