@@ -1,3 +1,10 @@
+Objective Caml 3.11.2:
+----------------------
+
+Bug fixes:
+- PR#4813: issue with parsing of float literals by the GNU assembler
+
+
 Objective Caml 3.11.1:
 ----------------------
 
